Opened 19 years ago

Closed 19 years ago

Last modified 18 years ago

#181 closed bug (fixed)

Menu windows steal the focus and never give it back

Reported by: jackburton Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description (last modified by wkornewald)

To reproduce:

  • Start tracker
  • Click on the "window" menu, select "settings"
  • Enable single window browsing and navigator
  • Close the settings window
  • Now try to click on any navigator button or on the address bar: it won't work,

it seems those views never get focus anymore. Closing and reopening the window fixes the problem.

  1. Menu windows shouldn't steal the focus
  2. At least they should give focus back when they are closed.

This replaces #159

Change History (26)

comment:1 by axeld, 19 years ago

Status: newassigned

comment:2 by axeld, 19 years ago

I can reproduce that the navigator items don't work after this procedure, and I'll look into that. I don't see any menus stealing focus, though - do you have any local changes that could be causing this?

comment:3 by jackburton, 19 years ago

stefano@shiryu:~/haiku/haiku$ svn status ? src/tools/jam ? src/tests/kits/interface/PictureTest.cpp ? src/tests/kits/game/windowscreen_test ? headers/private/interface/ClipRegion.h

Not anything related, at least. I'll try some way to reproduce it.

comment:4 by axeld, 19 years ago

Resolution: fixed

comment:5 by axeld, 19 years ago

Status: assignedclosed

comment:6 by axeld, 19 years ago

The tracker problem is gone with hrev16442. Please check again if you can reproduce the menus stealing focus - otherwise I'll close this bug.

comment:7 by jackburton, 19 years ago

Resolution: fixed

comment:8 by jackburton, 19 years ago

menus stealing focus: I can reproduce it this way: Start haiku, click on the deskbar so that it gets the focus and steals from the terminal.

Then click on the terminal again Then click on the terminal menu.

comment:9 by jackburton, 19 years ago

Status: closedreopened

comment:10 by axeld, 19 years ago

Status: reopenedassigned

comment:11 by axeld, 19 years ago

Great, I can easily reproduce this bug now, thanks!

comment:12 by jackburton, 19 years ago

Cc: diver added

comment:13 by jackburton, 19 years ago

* Bug 229 has been marked as a duplicate of this bug. *

comment:14 by axeld, 19 years ago

Fixed in hrev16532.

comment:15 by axeld, 19 years ago

Resolution: fixed

comment:16 by axeld, 19 years ago

Status: assignedclosed

comment:17 by jackburton, 19 years ago

Bug shows up again. Reopening...

comment:18 by jackburton, 19 years ago

Resolution: fixed

comment:19 by jackburton, 19 years ago

Status: closedreopened

comment:20 by axeld, 19 years ago

Could you elaborate a bit more? I definitely can't reproduce it anymore, at least not with the method you proposed.

comment:21 by jackburton, 19 years ago

I can reproduce it sometimes, but can't find a way to do it consistently this time.

comment:22 by axeld, 19 years ago

This has probably been fixed with hrev16811. Can you still reproduce it? Otherwise, I'd like to close this bug for good now :)

comment:23 by jackburton, 19 years ago

Resolution: fixed

comment:24 by jackburton, 19 years ago

Status: reopenedclosed

comment:25 by jackburton, 19 years ago

Fixed (hopefully for good) in hrev16811 :)

comment:26 by wkornewald, 18 years ago

Description: modified (diff)
Platform: All
Note: See TracTickets for help on using tickets.