When unhiding views, we need to update the clipping deep, or child views may be omitted. This fixes bug #181, or at least the part of it I can reproduce.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16442 a95241bf-73f2-0310-859d-f6bbb57e9c96